  expanded to "e0 e1 (fun p -> e2).

Compilers:
- Revised simplification of let-alias (PR#5205, PR#5288)
- Better reporting of compiler version mismatch in .cmi files
- Warning 28 is now enabled by default.
- New option -absname to use absolute paths in error messages

Native-code compiler:
- Optimized handling of partially-applied functions (PR#5287)

Standard library:
- Added float functions "hypot" and "copysign" (PR#3806, PR#4752, PR#5246)
- Array: faster implementations of "blit", "copy", "sub", "append" and "concat"
  (PR#2395, PR#2787, PR#4591)
- Hashtbl:
    . Statistically-better generic hash function based on Murmur 3 (PR#5225)
    . Fixed behavior of generic hash function w.r.t. -0.0 and NaN (PR#5222)
    . Added optional "seed" parameter to Hashtbl.create for diversification
    . Added new functorial interface "MakeSeeded" to support diversification
      with user-provided hash functions.

Bug Fixes:
- PR#4869: rare collisions between assembly labels for code and data
- PR#4880: "assert" constructs now show up in the exception stack backtrace
- PR#5322: type abbreviations expanding to a universal type variable
- PR#5330: thread tag with '.top' and '.inferred.mli' targets
- PR#5343: ocaml -rectypes is unsound wrt module subtyping
- PR#5416: (Windows) Unix.(set|clear)_close_on_exec now preserves blocking mode
- PR#5436: update object ids on unmarshaling
- emacs mode: colorization of comments and strings now works correctly

Feature wishes:
- PR#5358: first class modules don't allow "with type" declarations for types
  in sub-modules
- PR#5411: new directive for the toplevel: #load_rec
- PR#5420: Unix.openfile share mode (Windows)

Shedding weight:
- Removed the obsolete native-code generators for Alpha, HPPA, IA64 and MIPS.
- The "DBM" library (interface with Unix DBM key-value stores) is no
  longer part of this distribution.  It now lives its own life at
  https://forge.ocamlcore.org/projects/camldbm/


OCaml 3.12.1:
----------------------

Bug fixes: