@@ -23,6 +23,7 @@ Compilers:
 
 Native-code compiler:
 - Optimized handling of partially-applied functions (PR#5287)
+- Small improvements in code generated for array bounds checks (PR#5345, PR#5360).
 
 Standard library:
 - Added float functions "hypot" and "copysign" (PR#3806, PR#4752, PR#5246)
